@@ -6,6 +6,7 @@ run_unity =	cd $(srcdir) && ruby ../../sntp/unity/auto/generate_test_runner.rb
 
 check_PROGRAMS =		\
 	test-leapsec		\
+	test-ntp_prio_q		\
 	test-rc_cmdlength   \
 	$(NULL)
 
@@ -48,12 +49,14 @@ AM_LDFLAGS = $(LDFLAGS_NTP)
 tests_SOURCES = $(top_srcdir)/sntp/tests_main.cpp	\
 		g_ntpdtest.cpp		\
 		$(top_srcdir)/ntpd/ntp_leapsec.c	\
+		$(top_srcdir)/ntpd/ntp_prio_q.c		\
 		$(top_srcdir)/ntpd/rc_cmdlength.c	\
 		g_leapsec.cpp	\
 		$(NULL)
 
 BUILT_SOURCES +=			\
 	$(srcdir)/run-leapsec.c		\
+	$(srcdir)/run-ntp_prio_q.c	\
 	$(srcdir)/run-rc_cmdlength.c		\
 	$(NULL)
 
@@ -80,6 +83,27 @@ test_leapsec_SOURCES =			\
 $(srcdir)/run-leapsec.c: $(srcdir)/leapsec.c $(std_unity_list)
 	$(run_unity) leapsec.c run-leapsec.c
 
+
+###
+test_ntp_prio_q_CFLAGS =			\
+	-I$(top_srcdir)/sntp/unity	\
+	$(NULL)
+
+test_ntp_prio_q_LDADD =			\
+	$(unity_tests_LDADD)		\
+	../../ntpd/ntpdsim-ntp_prio_q.o		\
+	$(NULL)
+
+test_ntp_prio_q_SOURCES =			\
+	ntp_prio_q.c			\
+	run-ntp_prio_q.c			\
+	$(srcdir)/../libntp/test-libntp.c		\
+	$(NULL)
+
+$(srcdir)/run-ntp_prio_q.c: $(srcdir)/ntp_prio_q.c $(std_unity_list)
+	$(run_unity) ntp_prio_q.c run-ntp_prio_q.c
+
+
 ###
 test_rc_cmdlength_CFLAGS =			\
 	-I$(top_srcdir)/sntp/unity	\
@@ -97,6 +121,7 @@ test_rc_cmdlength_SOURCES =			\
 
 $(srcdir)/run-rc_cmdlength.c: $(srcdir)/rc_cmdlength.c $(std_unity_list)
 	$(run_unity) rc_cmdlength.c run-rc_cmdlength.c
+
 
 
 TESTS =
@@ -130,6 +155,9 @@ check-libunity: ../../sntp/unity/libunity.a
 
 ../../sntp/unity/libunity.a:
 	cd ../../sntp/unity && $(MAKE) $(AM_MAKEFLAGS) libunity.a
+
+$(top_builddir)/ntpd/ntpdsim-ntp_prio_q.o:
+	cd ../../ntpd/ && $(MAKE) $(AM_MAKEFLAGS) ntpdsim-ntp_prio_q.o
 
 include $(top_srcdir)/depsver.mf
 include $(top_srcdir)/includes.mf
